--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.jpa.hibernate.dll-auto=update
+spring.jpa.hibernate.dll-auto=create-drop
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
